rename package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@challengeee/react-gobo",
+  "name": "@challengeee/gobo4react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
