--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
+    "jest": "^29.7.0",
     "prettier": "3.2.5",
     "storybook": "^8.0.10",
     "typescript": "^5.2.2",
