--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     },
     "moduleNameMapper": {
       "\\.(gif|ttf|eot|svg|png)$": "<rootDir>/test/__ mocks __/fileMock.js"
-    }
+    },
+    "verbose": true
   },
   "dependencies": {
     "react": "^18.2.0",
