--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/test": "^8.1.9",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.22",
