--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "format": "prettier --write . --cache",
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/challengeee/gobo4react"
+  },
   "keywords": [
     "react",
     "Go",
