--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "Goban",
     "gobo"
   ],
+  "bugs": {
+    "url": "https://github.com/challengeee/gobo4react/issues"
+  },
   "author": "ReiRev <reirev2913@gmail.com> (https://reirev.net)",
   "jest": {
     "preset": "ts-jest",
