--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@storybook/addon-links": "^8.0.10",
     "@storybook/addon-onboarding": "^8.0.10",
     "@storybook/blocks": "^8.1.9",
-    "@storybook/react": "^8.1.9",
+    "@storybook/react": "^8.1.11",
     "@storybook/react-vite": "^8.1.9",
     "@storybook/test": "^8.1.9",
     "@testing-library/jest-dom": "^6.4.5",
@@ -115,6 +115,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-dts": "^3.9.1"
+    "vite-plugin-dts": "^3.9.1",
+    "ws": "^8.17.1"
   }
 }
