--- a/package.json
+++ b/package.json
@@ -80,20 +80,23 @@
     "react": "*",
     "react-dom": "*"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "*"
+  },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.5",
+    "@chromatic-com/storybook": "^1.6.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
-    "@storybook/addon-essentials": "^8.1.9",
-    "@storybook/addon-interactions": "^8.1.9",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/addon-onboarding": "^8.0.10",
-    "@storybook/blocks": "^8.1.9",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-onboarding": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
     "@storybook/react": "^8.1.11",
-    "@storybook/react-vite": "^8.1.9",
-    "@storybook/test": "^8.1.9",
+    "@storybook/react-vite": "^8.1.11",
+    "@storybook/test": "^8.1.11",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -115,7 +118,7 @@
     "jest-svg-transformer": "^1.0.0",
     "prettier": "3.2.5",
     "react-test-renderer": "^18.3.1",
-    "storybook": "^8.0.10",
+    "storybook": "^8.1.11",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
